--- a/.github/workflows/javawebappdeploy.yml
+++ b/.github/workflows/javawebappdeploy.yml
@@ -20,9 +20,9 @@
 name: Build and deploy JAR app to Azure Web App
 
 env:
-  AZURE_WEBAPP_NAME: webapp-java-01    # set this to the name of your Azure Web App
+  AZURE_WEBAPP_NAME: deploy-code-code-webapp    # set this to the name of your Azure Web App
   JAVA_VERSION: '17'                  # set this to the Java version to use
-  DISTRIBUTION: zulu                  # set this to the Java distribution
+  DISTRIBUTION: JAVA:17-java17                  # set this to the Java distribution
 
 on:
   push:
